--- a/projects/topomojo-work/src/app/admin/workspace-browser/workspace-browser.component.html
+++ b/projects/topomojo-work/src/app/admin/workspace-browser/workspace-browser.component.html
@@ -56,7 +56,7 @@
       <div class="form-group bg-light">
         <label class="mb-0" for="input-audience">Audience</label>
         <input id="input-audience" class="form-control" type="text" [(ngModel)]="detail.audience" (change)="update(detail)">
-        <small>template scopes this workspace can link</small>
+        <small>audience(s) that can deploy workspace as gamespace</small>
       </div>
 
       <div *ngFor="let t of detail.templates" class="row mb-1 align-items-center">
