context-transform examples

--- a/projects/topomojo-work/src/app/challenge-editor/challenge-editor.component.html
+++ b/projects/topomojo-work/src/app/challenge-editor/challenge-editor.component.html
@@ -36,6 +36,9 @@
           <span></span>
         </button>
         <pre *ngIf="showTransformExamples">
+          id &mdash; the gamespace id
+          grader_key &mdash; the grading apikey
+          grader_url &mdash; the grading url
           hex &mdash; yields 8 hex characters
           b64 &mdash; yields 24 base64 characters
           int &mdash; yields decimal string
