--- a/projects/topomojo-launchpoint/src/app/app.component.html
+++ b/projects/topomojo-launchpoint/src/app/app.component.html
@@ -35,11 +35,12 @@
 
     </div>
 
-    <div class="reader">
+    <pre *ngIf="showDetail">{{state | json}}</pre>
 
-      <pre *ngIf="showDetail">{{state | json}}</pre>
+    <div *ngIf="state.markdown" class="reader">
 
       <markdown [data]="state.markdown"></markdown>
+
     </div>
 
   </ng-container>
