Fix hidden VM buttons bug

--- a/projects/topomojo-launchpoint/src/app/app.component.html
+++ b/projects/topomojo-launchpoint/src/app/app.component.html
@@ -30,7 +30,7 @@
 
     <h1 *ngIf="state.error" class="text-danger">{{state.error | spaces}}</h1>
 
-    <div *ngIf="state.vms" class="flex-h z10">
+    <div *ngIf="state.vms" class="flex-h z10 vms">
 
       <div class="btn btn-lg" *ngFor="let vm of state.vms" (click)="open(vm)">
         <fa-icon [icon]="faTv"></fa-icon>
