Fix bug when wrongly hiding delete button for vm controls

--- a/projects/topomojo-work/src/app/utility/vm-controller/vm-controller.component.html
+++ b/projects/topomojo-work/src/app/utility/vm-controller/vm-controller.component.html
@@ -57,7 +57,7 @@
         <fa-icon [icon]="faStepBackward"></fa-icon>
       </button>
 
-      <button *ngIf="fullAdminView" class="btn btn-outline-dark" (click)="confirming=true"
+      <button *ngIf="!hideDelete" class="btn btn-outline-dark" (click)="confirming=true"
       aria-label="delete" tooltip="delete">
         <fa-icon [icon]="faTrash"></fa-icon>
       </button>
