--- a/projects/topomojo-work/src/app/admin/gamespace-browser/gamespace-browser.component.html
+++ b/projects/topomojo-work/src/app/admin/gamespace-browser/gamespace-browser.component.html
@@ -75,7 +75,7 @@
           <span class="pop-info px-1">{{vm.name | untag}}</span>
         </div>
         <div class="col-6">
-          <app-vm-controller [vm]="vm" [fullAdminView]="fullAdminView"></app-vm-controller>
+          <app-vm-controller [vm]="vm" [hideDelete]="!fullAdminView"></app-vm-controller>
         </div>
       </div>
       <div>
