--- a/projects/topomojo-work/src/app/admin/gamespace-interact/gamespace-interact.component.html
+++ b/projects/topomojo-work/src/app/admin/gamespace-interact/gamespace-interact.component.html
@@ -22,3 +22,7 @@
     </div>
   </div>
 </div>
+<small>
+  <fa-icon [icon]="faInfo"></fa-icon>
+  Specifying the target name is optional.  If omitted, the command will be processed by all listening agents.
+</small>
