include copyright notice

--- a/projects/topomojo-work/src/app/admin/gamespace-detail/gamespace-detail.component.html
+++ b/projects/topomojo-work/src/app/admin/gamespace-detail/gamespace-detail.component.html
@@ -1,3 +1,6 @@
+<!-- Copyright 2021 Carnegie Mellon University. -->
+<!-- Released under a 3 Clause BSD-style license. See LICENSE.md in the project root. -->
+
 <div class="text-center">
   <button class="btn btn-outline-info btn-sm mx-1" (click)="show('default')">
     <fa-icon [icon]="faList"></fa-icon>
