--- a/projects/topomojo-launchpoint/src/app/utility/confirm-button/confirm-button.component.html
+++ b/projects/topomojo-launchpoint/src/app/utility/confirm-button/confirm-button.component.html
@@ -1,3 +1,6 @@
+<!-- Copyright 2021 Carnegie Mellon University. -->
+<!-- Released under a 3 Clause BSD-style license. See LICENSE.md in the project root. -->
+
 <div class="btn-group flex-v">
   <button [disabled]="confirming" [class]="btnClass" (click)="confirming=true" [disabled]="disabled">
     <ng-content></ng-content>
