--- a/projects/topomojo-work/src/app/admin/gamespace-interact/gamespace-interact.component.html
+++ b/projects/topomojo-work/src/app/admin/gamespace-interact/gamespace-interact.component.html
@@ -1,3 +1,6 @@
+<!-- Copyright 2021 Carnegie Mellon University. -->
+<!-- Released under a 3 Clause BSD-style license. See LICENSE.md in the project root. -->
+
 <div class="widget">
   <div class="display text-monospace" #scrolltarget>
     <div *ngFor="let d of dispatches">
