--- a/projects/topomojo-work/src/app/admin/user-browser/user-browser.component.html
+++ b/projects/topomojo-work/src/app/admin/user-browser/user-browser.component.html
@@ -11,7 +11,7 @@
         <span>Search</span>
       </span>
     </div>
-    <input type="search" [(ngModel)]="search.term" placeholder="term" class="form-control" (input)="refresh$.next(true)">
+    <input type="search" [(ngModel)]="search.term" placeholder="term" class="form-control" (input)="termed()">
   </div>
   <div>
     <button class="btn btn-link text-primary btn-sm" (click)="create()">create</button>
@@ -41,8 +41,8 @@
   </div>
 </div>
 
-<small *ngIf="source.length === 100" class="text-warning">Results limited to 100. Refine search term if necessary.</small>
-<hr/>
+<app-pager [skip]="skip" [take]="take" [count]="count" (changed)="paged($event)"></app-pager>
+<hr class="mt-0 mb-2"/>
 
 <div *ngFor="let user of source$ | async; trackBy:trackById"
   class="row mb-1"
@@ -134,3 +134,6 @@
 
   </div>
 </div>
+
+<hr class="my-0"/>
+<app-pager [skip]="skip" [take]="take" [count]="count" (changed)="paged($event)"></app-pager>
