preserve console resolution when opened as admin

--- a/projects/topomojo-work/src/app/admin/workspace-browser/workspace-browser.component.html
+++ b/projects/topomojo-work/src/app/admin/workspace-browser/workspace-browser.component.html
@@ -64,7 +64,7 @@
           <span class="pop-info px-1">{{t.name}}</span>
         </div>
         <div class="col-6">
-          <app-vm-controller [template]="t"></app-vm-controller>
+          <app-vm-controller [template]="t" [fullbleed]="false"></app-vm-controller>
         </div>
       </div>
     </ng-container>
