--- a/projects/topomojo-mks/src/styles.scss
+++ b/projects/topomojo-mks/src/styles.scss
@@ -97,6 +97,12 @@ button:hover {
     border-radius: 0;
     min-width: 112px;
   }
+  div {
+    margin: 0;
+    border-radius: 0;
+    min-width: 112px;
+    color: $light;
+  }
 }
 app-spinner {
   svg path, svg rect {
