--- a/projects/topomojo-work/src/app/gamespace-state/gamespace-state.component.html
+++ b/projects/topomojo-work/src/app/gamespace-state/gamespace-state.component.html
@@ -3,7 +3,7 @@
 
 <markdown [data]="game.markdown"></markdown>
 
-<markdown [data]="game.challenge?.text || ''"></markdown>
+<markdown [data]="game.challenge.text || ''"></markdown>
 
 <ng-container *ngIf="!!game.id && game.isActive">
   <h3>Gamespace Resources</h3>
