--- a/projects/topomojo-work/src/app/template-editor-form/template-editor-form.component.html
+++ b/projects/topomojo-work/src/app/template-editor-form/template-editor-form.component.html
@@ -45,7 +45,7 @@
   <div class="form-group bg-light">
     <label for="mb-0 iso-input">Iso</label>
     <div class="input-group input-group-sm mb-1">
-      <label id="iso-input" class="form-control" name="iso">{{template.iso?.split('/')?.pop()}}</label>
+      <label id="iso-input" class="form-control" name="iso">{{template.iso.split('/').pop()}}</label>
       <div class="input-group-append">
         <button class="btn btn-sm btn-outline-info" (click)="isoClear()">
           <fa-icon [icon]="faTimes"></fa-icon>
