--- a/projects/topomojo-work/src/app/settings-editor/settings-editor.component.html
+++ b/projects/topomojo-work/src/app/settings-editor/settings-editor.component.html
@@ -25,6 +25,12 @@
   </div>
 
   <div class="form-group bg-light">
+    <label class="mb-0" for="tags-input">Tags</label>
+    <input id="tags-input" type="text" class="form-control" formControlName="tags">
+    <small>internal tags</small>
+  </div>
+
+  <div class="form-group bg-light">
     <label class="mb-0" for="author-input">Authorship</label>
     <input id="author-input" type="text" class="form-control" formControlName="author">
     <small>text to indicate authorship of this resource</small>
