--- a/projects/topomojo-work/src/app/template-editor-form/template-editor-form.component.html
+++ b/projects/topomojo-work/src/app/template-editor-form/template-editor-form.component.html
@@ -11,6 +11,10 @@
     <label class="mb-0" for="name-input">Name</label>
     <input id="name-input" type="text" class="form-control" [(ngModel)]="template.name" name="name" #name="ngModel" required maxlength="64" (input)="nospace($event)">
     <small [hidden]="name.valid || name.pristine" class="text-danger">Please enter a name for this template.</small>
+    <small class="ml-2">
+      <fa-icon [icon]="template.isLinked ? faLink : faUnlink"/>
+      <span>{{template.parentName}}</span>
+    </small>
   </div>
 
   <div class="form-group bg-light">
