--- a/projects/topomojo-work/src/app/utility/pager/pager.component.html
+++ b/projects/topomojo-work/src/app/utility/pager/pager.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="count>0" class="text-center">
+<div *ngIf="skip+count>=take" class="text-center">
   <!-- <button [disabled]="skip===0" class="mr-1 btn btn-link text-warning btn-sm" (click)="top()" aria-label="top page">
     <span>top</span>
   </button> | -->
